--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,52 +1,40 @@
-#website{
-    color:orangered;
-
-
+*{
+    font-family: 'Courier New';
 }
-h1 span{
-    color:rgb(201, 129, 41);
-
-
+h3{
+    color:rgb(189, 9, 9)
+}
+h1{
+    color:#b92b27;
+}
+#login{
+    background-color: rgb(154, 43, 246);
+}
+#signup{
+    background-color: #b92b27;
+}
+.upvote{
+    background-color: green;
+    color:white;
+}
+.post a{
+    color:purple;
+    background-color: yellow;
+}
+p+h3{
+    text-decoration:underline;
 }
 
-.container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-evenly;
-    gap: 1rem;
-
+.upvote+button{
+    background-color: cornflowerblue;
+    color: aliceblue;
 }
-.card{
-    border:black solid 2px;
-    height: 500px;
-    width:400px;
-    border-radius: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:flex-start;
-
-   
-
+div>input{
+   background-color: cornsilk;
 }
-.image{
-    border-radius: 20px;
-    height: 200px;
-    width: 90%;
-    margin: 10px;
-    margin-left: 20px;
-
-  
-
+input[type="text"]{
+    color: brown;
 }
-h3 {
-    margin:5px;
-}
-p{
-    margin: 5px;
-    text-align: justify;
-}
-@media(max-width:375px){
-    #pets{
-        flex-wrap:wrap;
-    }
+input[type="password"]{
+    color: rgb(158, 232, 0);
 }
