--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -1,34 +1,33 @@
-#mainTopic{
-    color:blue;
-
-
-}
-*{
-    align-items: center;
-}
-.head{
-    font-family: "georgia";
-}
-body p{
-    color: white;
-    background-color: cornflowerblue;
+#face{
+    height: 400px;
+    width:400px;
+    background-color: rgb(244, 210, 15);
+    border-radius: 50%;
+    
+    display: flex;
 
 }
-div button{
-    background-color: purple;
-    color: azure;
+.eye-right, .eye-left{
+    height: 50px;
+    width: 50px;
+    background-color: black;
+    border-radius: 50%;
+    display:inline-block;
+    position:absolute;
+    left:100px;
+    top: 100px;
 }
-div button:hover{
-    background-color: yellow;
-    color: blue;
-}
-body p:nth-of-type(2n+1){
-    color:yellow;
-}
-h1{
-    color:red;
-}
-input[type="checkbox"]:checked +label{
-    color:darkgreen;
+.eye-right{
+    left: 250px;
 
+}
+#mouth{
+    height: 65px;
+    width: 200px;
+    background-color: red;
+    border-radius: 0% 0% 50px 50px;
+    position: absolute;
+    top: 250px;
+    left: 100px;
+    
 }
